[package]
name = "mathlang"
version = "0.1.0"
authors = ["Nils Martel <nilsmartel@yahoo.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Parse and modify mathematical expressions."
repository = "https://github.com/nilsmartel/mathlang"
readme = "README.md"
keywords = ["math", "expression", "parsing", "evaluate", "compiler", "graph"]
categories = ["mathematics", "parsing", "science"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.0.0-alpha1"         # A byte-oriented, zero-copy, parser combinators library
